# json2sql

./: .gitignore  Cargo.toml  README.md  index.md  openfoodfacts.toml  preprocess_off.py  schema_yelp_review.json
.cargo/: config.toml
_archive/specs/: collision-hash-suffix.md  sibling-table-detection.md  structured-pivot.md  wide-table-root-handling.md
_brain/: _overview.md  current-task.md  debt.md  done.md
_brain/context/: business-rules.md  data-model.md
docs/: architecture.md  ihm-spec.md  index.md  next-session.md
docs/functional/: overview.md  usage.md
docs/technical/: architecture.md  modules.md  schema-inference.md
docs/ui/: design-system.md  ihm-design-prompt.md
json2sql-ui/: Cargo.toml
json2sql-ui/src/: alerts.rs  main.rs  migration.rs  state.rs  theme.rs
json2sql-ui/src/api/: alerts.rs  config.rs  export.rs  groups.rs  migration.rs  mod.rs  presets.rs  schema.rs
json2sql-ui/src/screens/: analysis.rs  import.rs  mod.rs  preview.rs  setup.rs  strategy.rs
json2sql-ui/static/: index.html
src/: cli.rs  error.rs  lib.rs  main.rs
src/anomaly/: collector.rs  reporter.rs
src/db/: connection.rs  copy_sink.rs  copy_text.rs  ddl.rs  mod.rs
src/io/: mod.rs  progress.rs  progress_event.rs  reader.rs
src/pass1/: runner.rs
src/pass2/: coercer.rs  mod.rs  runner.rs
src/schema/: config.rs  mod.rs  naming.rs  persistence.rs  registry.rs  stats.rs  suffix_detector.rs  table_schema.rs  type_tracker.rs
tests/: integration.rs  integration_anomalies.rs  integration_overrides.rs  integration_schema.rs  integration_strategies.rs
tests/common/: mod.rs
tests/fixtures/: anomalies.jsonl  anomalies_float.jsonl  anomalies_nullbytes.jsonl  auto_split.jsonl  flatten_nested.jsonl  keyed_pivot.jsonl  keyed_pivot_array.jsonl  keyed_pivot_mixed_shape.jsonl  keyed_pivot_pure_container.jsonl  normalize_dynamic_keys.jsonl  null_patterns.jsonl  override_bad.toml  override_score.toml  pivot_eav.jsonl  sibling_all_pure_containers.jsonl  sibling_mixed_unified_fallback.jsonl  sibling_noisy_schema.jsonl  sibling_pure_diluter.jsonl  sibling_significant_container.jsonl  structured_pivot.jsonl  users.json  users.jsonl  wide_jsonb.jsonl
