[package]
name = "json2sql-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "json2sql-ui"
path = "src/main.rs"

[dependencies]
# Shared types from the CLI
json2sql = { path = ".." }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# CLI args
clap = { version = "4", features = ["derive", "env"] }

# UUID pour les IDs de groupes
uuid = { version = "1", features = ["v4"] }

# Stream pour SSE
tokio-stream = { version = "0.1", features = ["sync"] }
