[package]
name = "json2sql-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "json2sql-ui"
path = "src/main.rs"

[dependencies]
# Shared types from the CLI
json2sql = { path = ".." }

# Desktop UI
dioxus = { version = "0.6", features = ["desktop"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
