[package]
name = "json2sql-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "json2sql-ui"
path = "src/main.rs"

[dependencies]
# Shared types from the CLI
json2sql = { path = ".." }

# Desktop UI
dioxus = { version = "0.6", features = ["desktop"] }
rfd = { version = "0.14", default-features = false, features = ["tokio", "xdg-portal"] }

# Async runtime (needed for spawn + channels alongside Dioxus)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PostgreSQL — test connection from Setup screen
tokio-postgres = { version = "0.7", default-features = false }
urlencoding = "2"

# Zeroize sensitive data (password) on drop
zeroize = "1"
